apps/mealie/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 9000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mealie
