apps/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${EXTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "${EXTERNAL_DOMAIN}"
      secretName: "mealie-tls"
  rules:
    - host: "${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
